Bug 734316 - Part 6: fix more PMD and checkstyle warnings. r=trivial